--- a/assets/scss/base/_components.scss
+++ b/assets/scss/base/_components.scss
@@ -1,3 +1,4 @@
+
 .button{
     display: inline-block;
     background-color: $first-color;
@@ -11,7 +12,8 @@
     }
 
     &:hover{
-        background-color: $white-color;
+        background-color: $text-color-light;
         color: $first-color;
+        //border: 1px solid $first-color;
     }
 }
